--- a/src/app/public/lista-datos/lista-datos.component.html
+++ b/src/app/public/lista-datos/lista-datos.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row" style="width: 100%; background:white; color: black; padding: 4px 12px; border-radius: 4px; margin-bottom: 5px; margin-left: 1px; font-size: 24px; line-height: 28px;">
-            <div class="col-sm-6" style="padding-top: 10px">LISTA PEDIDOS</div>
+            <div class="col-sm-6" style="padding-top: 10px">LISTA MOVIMIENTOS</div>
             <div class="col-sm-6">
             </div>
         </div>
