--- a/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
+++ b/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
@@ -20,6 +20,7 @@
     height: 35px;
     font-size: 9px;
     padding: 10px;
+    text-transform: none;
 }
 .btn-blanco{
     background-color: white;
